added JsonUtil and tested all implemented functions; Compleated user login and register, and saved in Json all users; Commented code is unusable, but a good start towards a running aplication;